--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  p This is a Node Application that has been containerized with Docker!
+  p This was done by Fabian to waste compute power!
+  p ¯\_(ツ)_/¯
